--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@ body {
 .glitch::before {
 		content: attr(data-text);
 		position: absolute;
-		left: -2px;
-		text-shadow: -5px 0 rgb(0, 255, 255);
+		left: -;
+		left: 0.02em;
+		text-shadow: -0.05em 0 rgb(0, 255, 255);
 		background: black;
 		overflow: hidden;
 		top: 0;
@@ -42,8 +43,8 @@ body {
 .glitch::after {
 		content: attr(data-text);
 		position: absolute;
-		left: 2px;
-		text-shadow: -5px 0 rgb( 0, 255, 255);
+		left: 0.02em;
+		text-shadow: -0.05em 0 rgb( 0, 255, 255);
 		background: black;
 		overflow: hidden;
 		top: 0;
@@ -61,24 +62,24 @@ body {
 
 		@keyframes noise-1 {
 				$steps: 30;
-		@for $i from 1 through $steps {
-				#{percentage($i*(1/$steps))} {
-						$top: random(100);
-						$bottom: random(101 - $top);
-				clip-path: inset(#{$top}px 0 #{$bottom}px 0);
+				@for $i from 1 through $steps {
+						#{percentage($i*(1/$steps))} {
+								$top: random(100);
+								$bottom: random(101 - $top);
+						clip-path: inset(#{$top}px 0 #{$bottom}px 0);
+						}
 				}
-		}
 		}
 
 		@keyframes noise-2 {
 				$steps: 30;
-		@for $i from 0 through $steps {
-				#{percentage($i*(1/$steps))} {
-						$top: random(100);
-						$bottom: random(101 - $top);
-				clip-path: inset(#{$top}px 0 #{$bottom}px 0);
+				@for $i from 0 through $steps {
+						#{percentage($i*(1/$steps))} {
+								$top: random(100);
+								$bottom: random(101 - $top);
+						clip-path: inset(#{$top}px 0 #{$bottom}px 0);
+						}
 				}
-		}
 		}
 
 		.scanlines {
